--- a/index.html
+++ b/index.html
@@ -1,46 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8" />
-	<title>familiapetronia.de</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
-</head>	
-
-<body>
-	<a href="index.html">Home</a>
-	<a href="Mitglieder.html">Mitglieder</a>
-
-	<h1>Willkommen bei der Familia Petronia</h1>
-	<p>
-		Wir schreiben das Jahr 867 ab urbe condita (114 n.Chr.). 
-		Die Familia Petronia lebt am Rande eines Oppidums in einer 
-		kleinen Villa. Der Pater Familias M. Petronius Crassus ist 
-		Mercator und deshalb dauernd auf Reisen, man trifft ihn 
-		selten zu Hause an. Manchmal begleiten ihn seine Frau und die 
-		Kinder, aber meistens ist er alleine unterwegs. 
-		Seine Handelsbeziehungen reichen weit und er bietet erlesene 
-		Waren auf den Märkten des Imperium Romanum an. So hat es die 
-		Familia zu einem bescheidenen Wohlstand gebracht. 
-	</p>
-
-	<h1>Über uns</h1>
-
-	<p>
-		Die Familia Petronia ist aus dem Wunsch heraus entstanden, 
-		das Leben der Menschen in Germania Superior vor 2000 Jahren 
-		darzustellen. Nach langer Suche nach einer Gruppe, der wir uns 
-		anschließen können und mehr als einer Enttäuschung, gründeten wir 
-		am 30. März 2014 die Familia. Man trifft uns nicht nur auf 
-		Römertagen in der Region, sondern auch auf Mittelaltermärkten an. 
-		Wir sind nicht auf römische Darstellungen festgelegt; zu unserer 
-		Interessensgemeinschaft gehören Angehörige der rund um das Imperium 
-		Romanum lebenden Völker, wie z.B. Germanen und Pikten. Wir stellen 
-		sowohl das militärische, als auch das zivile Leben dar, auf dem unser 
-		Schwerpunkt liegt. Wir erheben keinen Anspruch auf Authentizität, 
-		bemühen uns aber unser Bestes zu geben.
-	</p>
-
-
-	
-</body>
-</html>	
+---
+layout: default
+---
+Wir schreiben das Jahr 867 ab urbe condita (114 n.Chr.). 
+Die Familia Petronia lebt am Rande eines Oppidums in einer 
+kleinen Villa. Der Pater Familias M. Petronius Crassus ist 
+Mercator und deshalb dauernd auf Reisen, man trifft ihn 
+selten zu Hause an. Manchmal begleiten ihn seine Frau und die 
+Kinder, aber meistens ist er alleine unterwegs. 
+Seine Handelsbeziehungen reichen weit und er bietet erlesene 
+Waren auf den Märkten des Imperium Romanum an. So hat es die 
+Familia zu einem bescheidenen Wohlstand gebracht.
